--- a/template/homeUser.html
+++ b/template/homeUser.html
@@ -45,7 +45,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="card">
-                                    <h5 class="card-header">Mi fich</h5>
+                                    <h5 class="card-header">Mi ficha</h5>
                                     <div class="card-body">
                                         
                                       <p class="card-text">
